# validatornator

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs  utils.rs  validation.rs  validators.rs
src/utils/: validation_error.rs  validation_helpers.rs  validation_result.rs
src/validation/: strings.rs  validation_error.rs  validation_result.rs
src/validators/: decimals.rs  strings.rs  usize.rs
tests/: test_decimal_validation.rs  test_string_validation.rs  test_usize_validation.rs
