[package]
name = "validatornator"
description = "A simple validator intended to be used value object constructors"
version = "0.2.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
