[package]
name = "validatornator"
description = "A simple validator intended to be used value object constructors"
version = "0.3.0"
edition = "2021"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
thiserror = "1.0.58"
